--- a/app/views/static_pages/_game_info_it_works.html.erb
+++ b/app/views/static_pages/_game_info_it_works.html.erb
@@ -79,9 +79,9 @@
         </div>
         <!-- ADD GAME TO COLLECTION -->
         <div class="b-<%= game['id'] %>">
-        <div id="add-collection-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-collection-<%= game['id'] %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= game['id'] %>" >
+        <div id="add-collection-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-collection-<%= game['id'] %>; mode: click; pos: bottom-justify; delay-hide: 100; boundary-align: true; boundary: .b-<%= game['id'] %>" >
 
-            <!-- <button class="uk-dropdown-close" type="button" uk-close></button> -->
+            <button class="uk-dropdown-close" type="button" uk-close></button>
 
             <%= form_for(:game, url: games_path, remote: true) do |f| %>
             <% collection = @collections['collection'] %>
@@ -93,35 +93,33 @@
             <%= f.hidden_field :platforms, value: pid, multiple: true %>
             <% end %>
 
-            <div class="select-platform">
+            <div class="uk-margin">
             <div uk-form-custom="target: > * > span:last-child">
             <% if game['platforms'].size > 1 %>
             <%= f.select(:platform, platforms_for_select(game), prompt: 'Select Platform') %>
             <% else %>
             <%= f.select(:platform, platforms_for_select(game)) %>
             <% end %>
-            <span class='bigs'>
+            <span class="uk-link">
             <span class="platform-icon"><%= render 'platform' %></span>
             <span></span>
             </span>
             </div>
             </div>
 
-            <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
+            <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
             <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'physical' %> Physical</label>
             <label><%= f.radio_button(:physical, false, class: "digital") %><%= render 'digital' %> Digital</label>
             </div>
 
-            <button name="button" type="submit" class="add-button">Add</button>
 
-
-             <!-- # f.submit "Add" -->
+            <%= f.submit "Add" %>
 
             <% end %>
             <!-- <div class="add-form-errors">[]</div> -->
         </div>
         <!-- ADD TO CUSTOM COLLECTION -->
-        <div id="add-custom-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-custom-<%= game['id'] %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= game['id'] %>">
+        <div id="add-custom-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-custom-<%= game['id'] %>; mode: click; pos: bottom-justify; delay-hide: 100; boundary-align: true; boundary: .b-<%= game['id'] %>">
             <% if @collections.keys.any? { |form| form == 'custom'} %>
             <%= form_for(:game, url: games_path, remote: true) do |f| %>
             <%= f.hidden_field :needs_platform, value: true %>
