--- a/app/views/static_pages/_logged.html.erb
+++ b/app/views/static_pages/_logged.html.erb
@@ -54,3 +54,33 @@
 
     </div>
 </div>
+
+<div class="boundary-align uk-panel uk-placeholder">
+
+    <button class="uk-button uk-button-default uk-float-left" type="button">Justify</button>
+    <div uk-dropdown="mode: click, pos: bottom-justify; boundary: .boundary-align; boundary-align: true">
+        <ul class="uk-nav uk-dropdown-nav">
+            <li class="uk-active"><a href="#">Active</a></li>
+            <li><a href="#">Item</a></li>
+            <li class="uk-nav-header">Header</li>
+            <li><a href="#">Item</a></li>
+            <li><a href="#">Item</a></li>
+            <li class="uk-nav-divider"></li>
+            <li><a href="#">Item</a></li>
+        </ul>
+    </div>
+
+    <button class="uk-button uk-button-default uk-float-right" type="button">Center</button>
+    <div uk-dropdown="mode: click, pos: bottom-justify; boundary: .boundary-align; boundary-align: true">
+        <ul class="uk-nav uk-dropdown-nav">
+            <li class="uk-active"><a href="#">Active</a></li>
+            <li><a href="#">Item</a></li>
+            <li class="uk-nav-header">Header</li>
+            <li><a href="#">Item</a></li>
+            <li><a href="#">Item</a></li>
+            <li class="uk-nav-divider"></li>
+            <li><a href="#">Item</a></li>
+        </ul>
+    </div>
+
+</div>
