--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,7 +11,7 @@
   <p id="emot-happy">\(^o^)/</p>
 </div>
 <div class="input">
-  <p><%= image_tag('mail.svg', alt: 'mail logo', id: 'mail-icon', draggable: 'false')%><%= f.email_field :email, class: 'uk-input uk-form-width-medium', placeholder: 'Email address' %></p>
+  <p><%= image_tag('mail.svg', alt: 'mail logo', id: 'mail-icon', draggable: 'false')%><%= f.email_field :email, id: 'login-input-mail', class: 'uk-input uk-form-width-medium', placeholder: 'Email address' %></p>
 </div>
 <div class="input">
   <p class="password"><%= image_tag('key.svg', alt: 'password logo, key', id: 'key-icon', draggable: 'false')%><%= f.password_field :password, id: 'password', class: 'password uk-input uk-form-width-medium', placeholder: 'Password' %>
