--- a/app/views/users/new.js.erb
+++ b/app/views/users/new.js.erb
@@ -1,14 +1,26 @@
 $("#signup-modal").find(".modal-content").html("<%= j (render 'new') %>");
 
-$('.unmask').on('click', function(){
+$('#login-input-mail').on('input', function() {
 
-  if($(this).prev('input').attr('type') == 'password')
-    changeType($(this).prev('input'), 'text');
+    $("#mail-icon").replaceWith("<%= escape_javascript(render partial: 'form_mail_errors', locals: { errors: [] }) %>");
 
-  else
-    changeType($(this).prev('input'), 'password');
+});
 
-  return false;
+$('#password').on('input', function() {
+
+    $("#key-icon").replaceWith("<%= escape_javascript(render partial: 'form_pass_errors', locals: { errors: [] }) %>");
+
+});
+
+$('.unmask').on('click', function() {
+
+    if ($(this).prev('input').attr('type') == 'password')
+        changeType($(this).prev('input'), 'text');
+
+    else
+        changeType($(this).prev('input'), 'password');
+
+    return false;
 });
 
 
@@ -18,11 +30,11 @@ $('.unmask').on('click', function(){
 */
 
 function changeType(x, type) {
-    if(x.prop('type') == type)
+    if (x.prop('type') == type)
         return x; //That was easy.
     try {
         return x.prop('type', type); //Stupid IE security will not allow this
-    } catch(e) {
+    } catch (e) {
         //Try re-creating the element (yep... this sucks)
         //jQuery has no html() method for the element, so we have to put into a div first
         var html = $("<div>").append(x.clone()).html();
@@ -30,17 +42,16 @@ function changeType(x, type) {
         //If no match, we add the type attribute to the end; otherwise, we replace
         var tmp = $(html.match(regex) == null ?
             html.replace(">", ' type="' + type + '">') :
-            html.replace(regex, 'type="' + type + '"') );
+            html.replace(regex, 'type="' + type + '"'));
         //Copy data from old element
-        tmp.data('type', x.data('type') );
+        tmp.data('type', x.data('type'));
         var events = x.data('events');
         var cb = function(events) {
             return function() {
                 //Bind all prior events
-                for(i in events)
-                {
+                for (i in events) {
                     var y = events[i];
-                    for(j in y)
+                    for (j in y)
                         tmp.bind(i, y[j].handler);
                 }
             }
