--- a/app/views/games/create.js.erb
+++ b/app/views/games/create.js.erb
@@ -14,8 +14,16 @@ if (msg_type) {
 
 if (success) {
     if ((form === 'collection') || (form === 'custom')) {
+        // hide form dropdown
         var element = "#add-" + form + "-form-" + game_id;
         UIkit.dropdown(element).hide();
+        // add green mark to button
+        element = "#add-" + form + "-" + game_id;
+        $(element).addClass('remove');
+        // render games already in my collection
+        element = "#add-" + form + "-form-" + game_id + " .already-in";
+        proxy = "<%= escape_javascript(render partial: 'static_pages/already_in_collection', locals: { collection: @collection, game_name: @game.name, igdb_id: @game.igdb_id }) %>"
+        $(element).html(proxy);
     } else {
         var element = "#add-" + form + "-form-" + game_id;
         $(element).hide();
