--- a/app/views/static_pages/_game_info.html.erb
+++ b/app/views/static_pages/_game_info.html.erb
@@ -1,6 +1,6 @@
-<div id="i-<%= game['id'] %>" uk-offcanvas="mode: none; bg-close: false">
+<div id="i-<%= game['id'] %>" uk-offcanvas="mode: none; bg-close: true">
     <div class="uk-offcanvas-bar <%= game['id'] %>">
-        <button class="uk-offcanvas-close" type="button" uk-close></button>
+        <!-- <button class="uk-offcanvas-close" type="button" uk-close></button> -->
         <!-- TITLE & RELEASE YEAR -->
         <h3 id="info-title"><%= game['name'] %>
         <% if game["first_release_date"]%>
@@ -34,43 +34,47 @@
         <!-- NAVIGATION -->
         <div class="info-nav">
             <ul class="uk-iconnav">
+                <!-- CHECK USERS COLLECTIONS -->
+                <% added = {} %>
+                <% @collections.each_value do |collection| %>
+                <% added["#{collection.form}"] = collection.games.find_by(igdb_id: game['id']) %>
+                <% end %>
                 <!-- COLLECTION -->
                 <li>
-                <% collection = @collections['collection'] %>
-                <% tooltip = 'Add to / Remove from ' + (collection.custom_name || collection.name) %>
-                <%= content_tag(:button, '',id: "add-collection-#{ game['id'] }", class: 'icon-btn uk-icon-link',
-                'uk-icon' => 'database', 'uk-tooltip' => "title: #{tooltip}; pos: top-left") %>
+                    <% collection = @collections['collection'] %>
+                    <% tooltip = 'Add to / Remove from ' + (collection.custom_name || collection.name) %>
+                    <% extra_class = added['collection'] ? 'remove' : '' %>
+                    <%= content_tag(:a, '',id: "add-collection-#{ game['id'] }", class: "uk-icon-link " + extra_class,
+                    'uk-icon' => 'database', 'uk-tooltip' => "title: #{tooltip}; pos: top-left") %>
+                    <div class="underlight"></div>
                 </li>
                 <!-- WISHLIST -->
                 <!-- ___ADD -->
                 <% collection = @collections['wishlist'] %>
-                <% added = collection.games.find_by(igdb_id: game['id']) ? true : false %>
-                <%= content_tag(:li, id: "add-wishlist-form-" + game['id'].to_s,  style: added ? 'display: none;' : nil) do %>
+                <%= content_tag(:li, id: "add-wishlist-form-" + game['id'].to_s,  style: added['wishlist'] ? 'display: none;' : nil) do %>
                 <%= render partial: "add_form_no_platform",
                 locals: { game: game, collection: collection, icon: 'star' } %>
-                <div class="underlight"></div>
                 <% end %>
                 <!-- ___REMOVE -->
-                <%= content_tag(:li, id: "remove-wishlist-form-" + game['id'].to_s,  style: !added ? 'display: none;' : nil) do %>
+                <%= content_tag(:li, id: "remove-wishlist-form-" + game['id'].to_s,  style: !added['wishlist'] ? 'display: none;' : nil) do %>
                 <% tooltip = 'Remove from ' + (collection.custom_name || collection.name) %>
-                <%= link_to '', remove_s_url(game_igdb_id: game['id'], collection_id: collection.id),
-                 class: 'uk-icon-link remove', method: :delete, remote: true, 'uk-icon' => 'star', 'uk-tooltip' => "title: #{tooltip}; pos: top-left" %>
+                <%= link_to '', remove_s_url(game_id: game['id'], collection_id: collection.id, id_type: 'igdb'),
+                class: 'uk-icon-link remove', method: :delete, remote: true, 'uk-icon' => 'star', 'uk-tooltip' => "title: #{tooltip}; pos: top-left" %>
                 <div class="underlight"></div>
                 <% end %>
                 <!-- PLAYED -->
                 <!-- ___ADD -->
                 <% collection = @collections['played'] %>
-                <% added = collection.games.find_by(igdb_id: game['id']) ? true : false %>
                 <%= content_tag(:li, id: "add-played-form-" + game['id'].to_s,
-                    style: added ? 'display: none;' : nil) do %>
+                style: added['played'] ? 'display: none;' : nil) do %>
                 <%= render partial: "add_form_no_platform",
                 locals: { game: game, collection: collection, icon: 'bell' } %>
                 <% end %>
                 <!-- ___REMOVE -->
-                <%= content_tag(:li, id: "remove-played-form-" + game['id'].to_s, style: !added ? 'display: none;' : nil) do %>
+                <%= content_tag(:li, id: "remove-played-form-" + game['id'].to_s, style: !added['played'] ? 'display: none;' : nil) do %>
                 <% tooltip = 'Remove from ' + (collection.custom_name || collection.name) %>
-                <%= link_to '', remove_s_url(game_igdb_id: game['id'], collection_id: collection.id),
-                 class: 'uk-icon-link remove', method: :delete, remote: true, 'uk-icon' => 'bell', 'uk-tooltip' => "title: #{tooltip}; pos: top-left" %>
+                <%= link_to '', remove_s_url(game_id: game['id'], collection_id: collection.id, id_type: 'igdb'),
+                class: 'uk-icon-link remove', method: :delete, remote: true, 'uk-icon' => 'bell', 'uk-tooltip' => "title: #{tooltip}; pos: top-left" %>
                 <div class="underlight"></div>
                 <% end %>
                 <!-- CUSTOM -->
@@ -79,76 +83,80 @@
         </div>
         <!-- ADD GAME TO COLLECTION -->
         <div class="b-<%= game['id'] %>">
-        <div id="add-collection-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-collection-<%= game['id'] %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= game['id'] %>" >
+            <div id="add-collection-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-collection-<%= game['id'] %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= game['id'] %>" >
+                <button class="uk-dropdown-close add-form-close" type="button" uk-close></button>
+                <%= form_for(:game, url: games_path, remote: true) do |f| %>
+                <% collection = @collections['collection'] %>
+                <%= hidden_field_tag :collection, collection.id %>
+                <%= f.hidden_field :needs_platform, value: true %>
+                <%= f.hidden_field :name, value: game['name'] %>
+                <%= f.hidden_field :igdb_id, value: game['id'] %>
+                <% scalp_platforms(game).each do |pid| %>
+                <%= f.hidden_field :platforms, value: pid, multiple: true %>
+                <% end %>
+                <div class="select-platform">
+                    <div uk-form-custom="target: > * > span:last-child">
+                        <% if game['platforms'].size > 1 %>
+                        <%= f.select(:platform, platforms_for_select(game), prompt: 'Select Platform') %>
+                        <span class='bigs'>
+                            <span class="platform-icon"><%= render 'platform' %></span>
+                            <span></span>
+                        </span>
+                        <% else %>
+                        <%= f.select(:platform, platforms_for_select(game)) %>
+                        <span class='bigs'>
+                            <span class="platform-green"><%= render 'platform' %></span>
+                            <span></span>
+                        </span>
+                        <% end %>
+                    </div>
+                </div>
+                <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
+                    <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'physical' %> Physical</label>
+                    <label><%= f.radio_button(:physical, false, class: "digital") %><%= render 'digital' %> Digital</label>
+                </div>
+                <button name="button" type="submit" class="add-button">Add</button><span class="add-form-errors"></span>
+                <% end %>
 
-            <button class="uk-dropdown-close add-form-close" type="button" uk-close></button>
-
-            <%= form_for(:game, url: games_path, remote: true) do |f| %>
-            <% collection = @collections['collection'] %>
-            <%= hidden_field_tag :collection, collection.id %>
-            <%= f.hidden_field :needs_platform, value: true %>
-            <%= f.hidden_field :name, value: game['name'] %>
-            <%= f.hidden_field :igdb_id, value: game['id'] %>
-            <% scalp_platforms(game).each do |pid| %>
-            <%= f.hidden_field :platforms, value: pid, multiple: true %>
-            <% end %>
-
-            <div class="select-platform">
-            <div uk-form-custom="target: > * > span:last-child">
-            <% if game['platforms'].size > 1 %>
-            <%= f.select(:platform, platforms_for_select(game), prompt: 'Select Platform') %>
-            <span class='bigs'>
-            <span class="platform-icon"><%= render 'platform' %></span>
-            <span></span>
-            </span>
-            <% else %>
-            <%= f.select(:platform, platforms_for_select(game)) %>
-            <span class='bigs'>
-            <span class="platform-green"><%= render 'platform' %></span>
-            <span></span>
-            </span>
-            <% end %>
-
+                <!-- ALREADY IN -->
+                <div class="already-in">
+                    <%= render(partial: 'already_in_collection', locals: { collection: collection, game_name: game['name'], igdb_id: game['id'] }) if added['collection']  %>
+                </div>
             </div>
+
+
+
+
+
+
+
+            <!-- ADD TO CUSTOM COLLECTION -->
+            <div id="add-custom-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-custom-<%= game['id'] %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= game['id'] %>">
+                <% if @collections.keys.any? { |form| form == 'custom'} %>
+                <%= form_for(:game, url: games_path, remote: true) do |f| %>
+                <%= f.hidden_field :needs_platform, value: true %>
+                <%= f.hidden_field :name, value: game['name'] %>
+                <%= f.hidden_field :igdb_id, value: game['id'] %>
+                <% scalp_platforms(game).each do |pid| %>
+                <%= f.hidden_field :platforms, value: pid, multiple: true %>
+                <% end %>
+                <%= select_tag(:collection, options_for_select(collections_for_select(current_user)), prompt: 'Select Collection') %>
+                <% if game['platforms'].size > 1 %>
+                <%= f.select(:platform, platforms_for_select(game), prompt: 'Select Platform') %>
+                <% else %>
+                <%= f.select(:platform, platforms_for_select(game)) %>
+                <% end %>
+                <label><%= f.radio_button(:physical, true, checked: true) %>Physical</label>
+                <label><%= f.radio_button(:physical, false) %>Digital</label>
+                <%= f.submit 'Add', class: "btn btn-primary" %>
+                <% end %>
+                <div class="add-form-errors">[]</div>
+                <% else %>
+                <p>No custom collections to add games to!</p>
+                <% end %>
             </div>
-
-            <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
-            <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'physical' %> Physical</label>
-            <label><%= f.radio_button(:physical, false, class: "digital") %><%= render 'digital' %> Digital</label>
-            </div>
-
-            <button name="button" type="submit" class="add-button">Add</button><span class="add-form-errors"></span>
-
-            <% end %>
-        </div>
-        <!-- ADD TO CUSTOM COLLECTION -->
-        <div id="add-custom-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-custom-<%= game['id'] %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= game['id'] %>">
-            <% if @collections.keys.any? { |form| form == 'custom'} %>
-            <%= form_for(:game, url: games_path, remote: true) do |f| %>
-            <%= f.hidden_field :needs_platform, value: true %>
-            <%= f.hidden_field :name, value: game['name'] %>
-            <%= f.hidden_field :igdb_id, value: game['id'] %>
-            <% scalp_platforms(game).each do |pid| %>
-            <%= f.hidden_field :platforms, value: pid, multiple: true %>
-            <% end %>
-            <%= select_tag(:collection, options_for_select(collections_for_select(current_user)), prompt: 'Select Collection') %>
-            <% if game['platforms'].size > 1 %>
-            <%= f.select(:platform, platforms_for_select(game), prompt: 'Select Platform') %>
-            <% else %>
-            <%= f.select(:platform, platforms_for_select(game)) %>
-            <% end %>
-            <label><%= f.radio_button(:physical, true, checked: true) %>Physical</label>
-            <label><%= f.radio_button(:physical, false) %>Digital</label>
-            <%= f.submit 'Add', class: "btn btn-primary" %>
-            <% end %>
-            <div class="add-form-errors">[]</div>
-            <% else %>
-            <p>No custom collections to add games to!</p>
-            <% end %>
-        </div>
         </div>
         <hr class="nav-bottom">
-
         <!-- SUMMARY -->
         <% if summary = get_summary(game, 280, 50) %>
         <p id="info-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= game['id'] %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="myFunction(<%= game['id'] %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= game['id'] %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="myFunction(<%= game['id'] %>)" uk-icon="icon: triangle-up"></button></span>
@@ -215,15 +223,27 @@
     </div>
 </div>
 
-<script type="text/javascript">
-$('#add-collection-form-<%= game['id'] %> #game_platform').on('input', function() {
 
-    $('.platform-icon').attr('class', 'platform-green')
+        <script type="text/javascript">
+        $('#add-collection-form-<%= game['id'] %> #game_platform').on('input', function() {
+            $('.platform-icon').attr('class', 'platform-green')
+            if ($('#add-form-errors').length) {
+                var element = "#add-" + form + "-form-" + game_id + " .add-form-errors";
+                $(element).html("<%= escape_javascript(render partial: 'games/add_form_errors', locals: { errors: [] }) %>");
+            }
+        });
 
-    if ($('#add-form-errors').length) {
-        var element = "#add-" + form + "-form-" + game_id + " .add-form-errors";
-        $(element).html("<%= escape_javascript(render partial: 'games/add_form_errors', locals: { errors: [] }) %>");
-    }
+        $('#add-collection-form-<%= game['id'] %> .physical').on('input', function() {
+            if ($('#add-form-errors').length) {
+                var element = "#add-" + form + "-form-" + game_id + " .add-form-errors";
+                $(element).html("<%= escape_javascript(render partial: 'games/add_form_errors', locals: { errors: [] }) %>");
+            }
+        });
 
-});
-</script>
+        $('#add-collection-form-<%= game['id'] %> .digital').on('input', function() {
+            if ($('#add-form-errors').length) {
+                var element = "#add-" + form + "-form-" + game_id + " .add-form-errors";
+                $(element).html("<%= escape_javascript(render partial: 'games/add_form_errors', locals: { errors: [] }) %>");
+            }
+        });
+        </script>
