--- a/app/views/static_pages/_already_in_collection.html.erb
+++ b/app/views/static_pages/_already_in_collection.html.erb
@@ -1,9 +1,12 @@
+<% games = collection.games.where(igdb_id: igdb_id)%>
+<% if games.any? %>
 <p>"<%= game_name %>" games already in "<%= collection.custom_name || collection.name %>":</p>
 <ul>
-  <% collection.games.where(igdb_id: igdb_id).each do |game| %>
+  <% games.each do |game| %>
   <li><%= game.platform_name %> (<%= game.physical ? 'Physical' : 'Digital' %>)
     <%= link_to '', remove_s_url(game_id: game.id, collection_id: collection.id, id_type: 'game_id'),
     class: 'uk-icon-link', method: :delete, remote: true, 'uk-icon' => 'trash' %>
   </li>
   <% end %>
 </ul>
+<% end %>
