--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -941,6 +941,18 @@ p.header {
     padding-top: 20px;
 }
 
+.uk-iconnav a {
+    background: #444444f7;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.uk-iconnav button {
+    background: #444444f7;
+    padding: 5px;
+    border-radius: 3px;
+}
+
 #info-links {
     margin-top: 20px;
 }
@@ -1116,12 +1128,15 @@ button.uk-dropdown-close.uk-close.uk-icon {
 // }
 
 .remove + .underlight {
-    box-shadow: 0px 2px 0px 2px $accent_darker;
+    background: $accent_darker;
     position: relative;
-    bottom: -4px;
+    bottom: -6px;
+    border: 2px solid $accent_darker;
+    border-radius: 1px;
 }
 
 .remove:hover + .underlight {
+    background: $accent;
     border-color: $accent;
 }
 
