Add fix to problem with uikit notifications and turbolinks. (disable turbolinks for search games page)

--- a/app/views/static_pages/_logged.html.erb
+++ b/app/views/static_pages/_logged.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome <%= current_user.email %></h1>
 
-<p><%= link_to "Add games", search_path%></p>
+<p><%= link_to "Add games", search_url, 'data-turbolinks' => 'false' %></p>
 
 <h2>Your collections: </h2>
 
@@ -30,57 +30,3 @@
 <% end %>
 
 <p><%= link_to "Log out", logout_path, method: :delete %></p>
-
-<button class="uk-button uk-button-default" type="button" uk-toggle="target: #offcanvas-nav-primary">Default Nav</button>
-
-<div id="offcanvas-nav-primary" uk-offcanvas="overlay: true">
-    <div class="uk-offcanvas-bar uk-flex uk-flex-column">
-
-        <ul class="uk-nav uk-nav-primary uk-nav-center uk-margin-auto-vertical">
-            <li class="uk-active"><a href="#">Active</a></li>
-            <li class="uk-parent">
-                <a href="#">Parent</a>
-                <ul class="uk-nav-sub">
-                    <li><a href="#">Sub item</a></li>
-                    <li><a href="#">Sub item</a></li>
-                </ul>
-            </li>
-            <li class="uk-nav-header">Header</li>
-            <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: table"></span> Item</a></li>
-            <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: thumbnails"></span> Item</a></li>
-            <li class="uk-nav-divider"></li>
-            <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: trash"></span> Item</a></li>
-        </ul>
-
-    </div>
-</div>
-
-<div class="boundary-align uk-panel uk-placeholder">
-
-    <button class="uk-button uk-button-default uk-float-left" type="button">Justify</button>
-    <div uk-dropdown="mode: click, pos: bottom-justify; boundary: .boundary-align; boundary-align: true">
-        <ul class="uk-nav uk-dropdown-nav">
-            <li class="uk-active"><a href="#">Active</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="uk-nav-header">Header</li>
-            <li><a href="#">Item</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="uk-nav-divider"></li>
-            <li><a href="#">Item</a></li>
-        </ul>
-    </div>
-
-    <button class="uk-button uk-button-default uk-float-right" type="button">Center</button>
-    <div uk-dropdown="mode: click, pos: bottom-justify; boundary: .boundary-align; boundary-align: true">
-        <ul class="uk-nav uk-dropdown-nav">
-            <li class="uk-active"><a href="#">Active</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="uk-nav-header">Header</li>
-            <li><a href="#">Item</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="uk-nav-divider"></li>
-            <li><a href="#">Item</a></li>
-        </ul>
-    </div>
-
-</div>
