Add minor styling fixes to add button in add to my collection form.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1012,9 +1012,9 @@ hr.nav-bottom {
     border-radius: 5px;
     font-size: 13px;
     color: rgba(255, 255, 255, 0.5);
-    padding: 2px 6px;
+    padding: 2px 8px;
     cursor: pointer;
-    margin-bottom: 3px;
+    height: 28px;
 }
 
 .add-button:hover {
@@ -1146,6 +1146,7 @@ button.uk-dropdown-close.uk-close.uk-icon {
 }
 
 span.add-form-errors {
+    height: 25px;
     position: relative;
     top: -1px;
 }
@@ -1153,10 +1154,11 @@ span.add-form-errors {
 
 .already-in {
     font-size: 12px;
-    margin-top: 10px;
+    margin-top: 0px;
 
     p {
-        margin-bottom: 10px
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     ul {
