Change icon for physical in add to my collection form.

--- a/app/views/static_pages/_game_info.html.erb
+++ b/app/views/static_pages/_game_info.html.erb
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
-                    <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'physical' %> Physical</label>
+                    <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'gamebox' %> Physical</label>
                     <label><%= f.radio_button(:physical, false, class: "digital") %><%= render 'digital' %> Digital</label>
                 </div>
                 <button name="button" type="submit" class="add-button">Add</button><span class="add-form-errors"></span>
