--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -526,9 +526,12 @@ footer {
     height: 266px;
     margin-bottom: 0px !important;
     border-radius: 3px;
-    outline: 1px solid #ffffffe8;
-    outline-offset: -1px;
-    outline-style: outset;
+    // outline: 1px solid #ffffffe8;
+    // outline-offset: -1px;
+    // outline-style: outset;
+
+    border: 1px solid transparent;
+
     background-color: transparent;
     box-shadow: -2px 4px 9px 1px rgba(158, 158, 158, 0.6), inset 0px 0px 120px rgba(158, 158, 158, 0.6);
     transition-duration: 0.3s;
