Change api status to just information about api. Dump box-shadow effect on html element.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,7 +33,7 @@ $lighter: rgba(255, 255, 255, 0.7);
 html {
     // background-color: $background;
     background-image: url('noise.png');
-    box-shadow: inset 5px 5px 200px #00000036;
+    // box-shadow: inset 5px 5px 200px #00000036;
 }
 
 body {
