--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -6,31 +6,8 @@
     <%= f.text_field(:inquiry, placeholder: "Search video games..." , class: "uk-search-input search-bar", autofocus: "true", autocomplete: "off") %>
   </div>
   <div class="api-status" uk-dropdown="toggle: #infc; pos: right-center; mode: hover; animation: uk-animation-scale-up; delay-hide: 0; duration: 100">
-    <% status, requests_left, days_left = get_api_status %>
-    <table>
-      <tr class="first-r">
-        <td class="status-label">
-          <%= image_tag("igdb_white.svg", alt: "IGDB logo",class: "igdb-logo", draggable: "false", width: 30) %>
-          IGDB API Status:
-          <td id="status" class="values">
-            <% if status %>
-            <% icon = status ? "check" : "ban" %>
-            <% else %>
-            <% icon = "question" %>
-            <% end %>
-            <%= content_tag(:span, nil, "uk-icon" => "#{icon}") %>
-          </td>
-        </tr>
-        <tr>
-          <td>Requests left:</td>
-          <td id="requests_left" class="values"><%= requests_left %></td>
-        </tr>
-        <tr>
-          <td>Days to next period:</td>
-          <td id="days_left" class="values"><%= days_left %></td>
-        </tr>
-      </table>
-    </div>
+  <p><%= render 'svgs/igdb' %> IGDB: Free Video Game Database</p>
+</div>
     <div class="search-dropdown" uk-dropdown="toggle: #search_inquiry; pos: bottom-center; mode: click">
       <div class="strike"><span>Search by:</span></div>
       <div class="uk-margin uk-grid-small uk-grid drop-grid">
