Add: When something changed in search bar input error notification dissapears

--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -3,7 +3,7 @@
   <div class="uk-inline s-inline">
     <span id="search-errors" class="uk-form-icon search-icon" uk-icon="search"></span>
     <%= content_tag(:span, nil,id: "infc", class: "info-icon", "uk-icon" => "info")%>
-    <%= f.text_field(:inquiry, placeholder: "Search video games..." , class: "uk-search-input search-bar", autofocus: "true", autocomplete: "off") %>
+    <%= f.text_field(:inquiry, placeholder: "Search video games..." , id: "search-igdb-bar", class: "uk-search-input search-bar", autofocus: "true", autocomplete: "off") %>
   </div>
   <div class="api-status" uk-dropdown="toggle: #infc; pos: right-center; mode: hover; animation: uk-animation-scale-up; delay-hide: 0; duration: 100">
   <p><%= render 'svgs/igdb' %> IGDB: Free Video Game Database</p>
