--- a/app/views/static_pages/_search_errors.html.erb
+++ b/app/views/static_pages/_search_errors.html.erb
@@ -1,8 +1,8 @@
-<% if @inquiry.errors.any? %>
+<% if errors.any? %>
   <span id="search-errors" class="search-warning-icon blink_me"></span>
   <!-- <span id="search-errors" class="uk-form-icon warning-icon blink_me" uk-icon="warning"></span> -->
   <div class="errors" uk-dropdown="toggle: #search-errors; pos: left-center; mode: hover; animation: uk-animation-scale-up; delay-hide: 0; duration: 100">
-    <% errors = @inquiry.errors.full_messages %>
+    <% errors = errors.full_messages %>
     <% if errors.size == 1 %>
       <p>Please <%= errors.first %></p>
     <% else %>
